# songseeker-hitster-playlists

./: Cargo.toml  README.md  hitster-hu-aaae0003.csv  hitster-pl-aaae0001.csv  hitster-pl-aaae0004.csv  playlists.csv
.github/workflows/: ci.yml
playlists/: hitster-ar.csv  hitster-au-aaah0002.csv  hitster-au.csv  hitster-baltics-aaal0002.csv  hitster-baltics.csv  hitster-be-aaaa0052.csv  hitster-be-aaaa0082.csv  hitster-br-aaaq0002.csv  hitster-br-aaaq0003.csv  hitster-br.csv  hitster-ca-aaad0001.csv  hitster-ca-aaad0002.csv  hitster-ca-aaad0003.csv  hitster-ca-aaad0004.csv  hitster-ca-aaad0005.csv  hitster-ca-aaad0006.csv  hitster-ca-aaad0007.csv  hitster-ca-aaad0008.csv  hitster-ca-aaad0009.csv  hitster-ca-aaad0010.csv  hitster-ca.csv  hitster-ch.csv  hitster-cl-aaaa0056.csv  hitster-cl-aaau0001.csv  hitster-cz-aaae0006.csv  hitster-de-aaaa0007.csv  hitster-de-aaaa0012.csv  hitster-de-aaaa0015.csv  hitster-de-aaaa0019.csv  hitster-de-aaaa0025.csv  hitster-de-aaaa0026.csv  hitster-de-aaaa0027.csv  hitster-de-aaaa0039.csv  hitster-de-aaaa0040.csv  hitster-de-aaaa0042.csv  hitster-de-aaaa0059.csv  hitster-de-aaaa0064.csv  hitster-de-aaaa0075.csv  hitster-de-aaaa0079.csv  hitster-de-aaaa0080.csv  (+109 more)
src/: checker.rs  csv_parser.rs  main.rs  record.rs  song.rs
