[package]
name = "songseeker-hitster-playlists"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15.0"
serde_json = "1.0.149"
log = "0.4.29"
env_logger = "0.11.10"
csv = "1.4.0"
regex = "1.12.3"
rayon = "1.11.0"
sha2 = "0.11.0"
hex = "0.4.3"
clap = { version = "4.6.0", features = ["derive"] }
